swim_common/src/form/tests/derive/form/incorrect_tag_type_enum.stderr
error: Expected a string literal
  --> $DIR/incorrect_tag_type_enum.rs:20:22
   |
20 |         #[form(tag = 13)]
   |                      ^^
